🐛 add methods removeTile and keepBlocks